--- a/game.html
+++ b/game.html
@@ -81,13 +81,13 @@ canvas.addEventListener("touchstart",yesMoving);
 canvas.addEventListener("touchend",notMoving);
 var load=function(){
 	sprites.player=new Image();
-	sprites.player.src="images/player.png";
+	sprites.player.src="player.png";
 	sprites.goal=new Image();
-	sprites.goal.src="images/goal.png";
+	sprites.goal.src="goal.png";
 	sprites.background=new Image();
-	sprites.background.src="images/background.jpg";
+	sprites.background.src="background.jpg";
 	sprites.enemy=new Image();
-	sprites.enemy.src="images/enemy.jpg";
+	sprites.enemy.src="enemy.jpg";
 
 };
 
